[gd_scene load_steps=4 format=3 uid="uid://cqyn3ifdqp0ul"]

[ext_resource type="FontFile" uid="uid://8n2j0x5tijeu" path="res://fonts/Xolonium-Regular.ttf" id="1_lptrq"]
[ext_resource type="Script" path="res://event.gd" id="1_wj6u8"]
[ext_resource type="PackedScene" uid="uid://dsfth4sc7xfj0" path="res://choice_slot.tscn" id="3_0w8t2"]

[node name="Event" type="Control"]
custom_minimum_size = Vector2(750, 700)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wj6u8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="Event Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_lptrq")
theme_override_font_sizes/font_size = 25
text = "Event Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Event Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 75.0
offset_right = 350.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_lptrq")
theme_override_font_sizes/font_size = 18
text = "Event Description"
autowrap_mode = 2

[node name="Choice_grid" type="GridContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choice_Slot1" parent="Choice_grid" instance=ExtResource("3_0w8t2")]
layout_mode = 2

[node name="Choice_Slot2" parent="Choice_grid" instance=ExtResource("3_0w8t2")]
layout_mode = 2

[node name="Choice_Slot3" parent="Choice_grid" instance=ExtResource("3_0w8t2")]
layout_mode = 2

[connection signal="button_press" from="Choice_grid/Choice_Slot1" to="." method="_on_choice_slot_1_button_press"]
[connection signal="button_press" from="Choice_grid/Choice_Slot2" to="." method="_on_choice_slot_2_button_press"]
[connection signal="button_press" from="Choice_grid/Choice_Slot3" to="." method="_on_choice_slot_3_button_press"]
